[gd_scene load_steps=26 format=2]

[ext_resource path="res://MyAssets/player_idle.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/SwordHitbox.gd" type="Script" id=4]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=7]
[ext_resource path="res://MyAssets/player_walk.png" type="Texture" id=8]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://Effects/Light.tscn" type="PackedScene" id=10]
[ext_resource path="res://MyAssets/player_attack.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.10904
height = 6.22894

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.65285
height = 15.4547

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.99497
height = 6.20155

[sub_resource type="Animation" id=9]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 1.412 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -8 )
frames = SubResource( 5 )
animation = "Attack"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 6 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -8 )
rotation = -3.14159
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 12, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
shape = SubResource( 7 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 2147483652

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 9 )
anims/Stop = SubResource( 10 )

[node name="Light" parent="." instance=ExtResource( 10 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="HitboxPivot/SwordHitbox"]

[editable path="Hurtbox"]
